Upgrade to 1.9.7 snapshot
Signed-off-by: Alexander Kriegisch <Alexander@Kriegisch.name>